# aibox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REWRITE.md  aibox-claude  aibox-claude.Dockerfile  aibox-codex  aibox-codex.Dockerfile
.github/workflows/: ci.yml
assets/: aibox-claude.Dockerfile  aibox-codex.Dockerfile  base.Dockerfile  claude-status.sh  claude.Dockerfile  codex.Dockerfile
src/: agent.rs  cli.rs  creds.rs  docker.rs  envfile.rs  lib.rs  main.rs  platform.rs  profile.rs  refresh.rs  runspec.rs  session.rs  session_claude.rs  session_codex.rs  sync.rs  template.rs
src/session/: claude.rs  codex.rs  mod.rs
