[package]
name = "aibox"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Run coding agents (Claude Code, OpenAI Codex) inside a Docker container that is the sandbox boundary"
license = "BSD-2-Clause"
repository = "https://github.com/rbee3u/aibox"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["docker", "sandbox", "claude", "codex", "agent"]

# Single binary; agents are dispatched via `aibox claude` / `aibox codex`
# subcommands. Shared logic lives in the library so it can be unit-tested.
[lib]
name = "aibox"
path = "src/lib.rs"

[[bin]]
name = "aibox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
indexmap = "2"
tempfile = "3"
signal-hook = "0.3"
rustix = { version = "0.38", features = ["process"] }
libc = "0.2"
anyhow = "1"
walkdir = "2"

[profile.release]
strip = true
lto = "thin"
